--- a/frontend/components/CSS/App.css
+++ b/frontend/components/CSS/App.css
@@ -3,18 +3,22 @@ body {
   overflow-x: hidden;
   margin: 0;
 }
+
 .App-logo {
   height: 40vmin;
   pointer-events: auto;
 }
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
+
 html {
   background-color: #ffffff;
 }
+
 .App-header {
   min-height: 70vmin;
   margin: 0;
@@ -26,6 +30,7 @@ html {
   justify-content: center;
   background-color: black;
 }
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -34,26 +39,22 @@ html {
     transform: rotate(360deg);
   }
 }
+
 h1 {
-  color: white;
   font-family: Inter, sans-serif;
   margin-bottom: 10vh;
 }
-.key-features {
-  position: absolute;
-  height: 200vh;
-  left: 0;
-  width: 100vw;
-}
+
 .key-features h1 {
   margin-left: 5vw;
   margin-right: 5vw;
+  margin-bottom: 20vh;
 }
 
 .first-comp {
   padding-top: 100px;
   color: black;
-  font-size: 8vh;
+  font-size: 60px;
   animation: fadeIn 8s;
 }
 @keyframes fadeIn {
@@ -65,61 +66,37 @@ h1 {
   }
 }
 
-.Pods-demo {
-  display: grid;
-  grid-template-columns: repeat(2, minmax(350px, 1fr));
-  grid-gap: 5vw;
-  margin: 10vw;
-}
-
-@media screen and (max-width: 1200px) {
-  .Pods-demo {
-    grid-template-columns: repeat(1, minmax(350px, 1fr));
-  }
-}
-
 .Pods-description {
-  font-size: 3vmin;
-  height: 40vmin;
+  width: 35vw;
+  display: inline-block;
+  font-size: 30px;
   border: 2px;
-  margin: auto;
   border-style: solid;
   border-radius: 20px;
   padding: 10px;
+  padding-bottom: 80px;
   box-shadow: 10px 5px 5px rgb(0, 255, 247);
-  display: flex;
-  justify-content: center;
+  vertical-align: top;
+  margin: 2vw 5vw;
+  min-width: 400px;
 }
-.demo {
-  height: 50vmin;
-  padding: 10px;
+
+#ac-chart-container {
+  height: 500px;
+  width: 45vw;
+  min-width: 700px;
+  display: inline-block;
+  margin-bottom: 20vh;
 }
 
 .metrics {
-  display: grid;
-  grid-template-columns: repeat(2, minmax(350px, 1fr));
-  grid-gap: 15w;
-  margin: 10vw;
-}
-.metrics-description {
-  font-size: 3vmin;
-  height: 40vmin;
-  width: 50vmin;
-  border: 2px;
-  border-style: solid;
-  border-color: black;
-  margin-right: 5vw;
-  padding: 10px;
-  box-shadow: 10px 5px 5px rgb(0, 255, 247);
-  border-radius: 20px;
-  display: flex;
-  justify-content: center;
+  height: 50vmin;
 }
 
 .download {
   color: white;
   background-color: #89d6c5;
-  font-size: 3vmin;
+  font-size: 30px;
   height: 10vmin;
   width: 40vmin;
   border: 2px;
@@ -147,8 +124,4 @@ h1 {
   top: 5px;
   left: 5px;
   box-shadow: none;
-}
-
-#ac-chart-container {
-  height: 500px;
 }
