--- a/frontend/components/CSS/footer.css
+++ b/frontend/components/CSS/footer.css
@@ -39,5 +39,28 @@
   background-color: rgb(206, 206, 206);
   padding-top: 30px;
   padding-bottom: 10px;
-  margin-top: 30px;
+  margin-top: 80px;
+}
+
+#hunter:hover {
+  color: red;
+}
+#kai:hover {
+  color: yellow;
+}
+#thad:hover {
+  color: green;
+}
+#fab:hover {
+  color: blue;
+}
+#kevin:hover {
+  color: purple;
+}
+
+.bottomNames {
+  display: inline;
+  font-size: 12px;
+  padding: 0;
+  transition: 1s;
 }
