--- a/frontend/components/CSS/App.css
+++ b/frontend/components/CSS/App.css
@@ -22,13 +22,15 @@ html {
 .App-header {
   min-height: 70vmin;
   margin: 0;
+  margin-top: 85px;
   padding-top: 10vh;
-  width: 100vw;
+  width: 99vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   background-color: black;
+  border-radius: 3000px;
 }
 
 @keyframes App-logo-spin {
