--- a/frontend/components/CSS/App.css
+++ b/frontend/components/CSS/App.css
@@ -2,6 +2,19 @@ body {
   text-align: center;
   overflow-x: hidden;
   margin: 0;
+  background-color: rgb(255, 254, 238);
+  color: rgb(0, 0, 0);
+  transition: 2s;
+}
+
+body[theme='dark'] {
+  background-color: rgb(0, 0, 0);
+  color: white;
+}
+
+body[theme='light'] {
+  background-color: rgb(255, 254, 238);
+  color: rgb(0, 0, 0);
 }
 
 .App-logo {
@@ -55,7 +68,6 @@ h1 {
 
 .first-comp {
   padding-top: 100px;
-  color: black;
   font-size: 60px;
   animation: fadeIn 8s;
 }
