--- a/frontend/components/CSS/footer.css
+++ b/frontend/components/CSS/footer.css
@@ -36,7 +36,7 @@
 }
 
 .footer {
-  background-color: rgb(206, 206, 206);
+  background-color: rgba(255, 255, 255, 0.7);
   padding-top: 30px;
   padding-bottom: 10px;
   margin-top: 80px;
