--- a/frontend/components/CSS/about.css
+++ b/frontend/components/CSS/about.css
@@ -1,11 +1,12 @@
 .gridsystem {
-  padding-top: 40vh;
-  padding-bottom: 40vh;
+  padding-top: 25vh;
+  padding-bottom: 36vh;
   display: flex;
   flex-direction: row;
   justify-content: center;
   max-width: 100%;
   font-size: 30px;
+  flex-wrap: wrap;
 }
 .box {
   display: flex;
@@ -15,6 +16,8 @@
   border: 20px;
   height: 20vh;
   width: 15vw;
+  min-width: 250px;
+  padding-top: 200px;
   margin: auto;
 }
 
@@ -40,8 +43,8 @@
 }
 
 .headShot {
-  height: 13vw;
-  width: 13vw;
+  height: 220px;
+  width: 220px;
   object-fit: cover;
   object-position: 0 0;
   margin: 20px;
