--- a/frontend/components/CSS/App.css
+++ b/frontend/components/CSS/App.css
@@ -5,6 +5,7 @@ body {
   background-color: rgb(0, 0, 0);
   color: white;
   transition: 2s;
+  font-family: Inter, sans-serif;
 }
 
 body[theme='dark'] {
